Updated linux build file

--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@ serialisation/Serialisation.sln
 serialisation/Serialisation.v11.suo
 serialisation/Serialisation.vcxproj.filters
 serialisation/Serialisation.vcxproj.user
-bin/
+bin/*
 build/
 *.opensdf
 *.vcxproj
