--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ install:
 - sudo apt-get install build-essential
 
 script:
-- ./generateProjectGmake.sh
+- sh ./generateProjectGmake.sh
 - cd serialisation
 - make config=debug_x32
 - make config=debug_x64
