--- a/.travis.yml
+++ b/.travis.yml
@@ -10,16 +10,15 @@ compiler:
   
 before_install:
 - sudo apt-get update -qq
-
-install: 
 - sudo apt-get install build-essential
-
-script:
+- echo $TRAVIS_OS_NAME
 
 - git clone https://github.com/premake/premake-core.wiki.git premake
 - cd premake
 - make -f Bootstrap.mak $TRAVIS_OS_NAME
 - mv premake/bin/release/premake5 ./extern/project/
+
+script:
  
 - cd ./extern/project
 - chmod a+x ./premake5
