--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,11 @@
 -- artifacts
 bin/*
+test/obj/*
+test/bin/*
 
 -- zpm
-._config.json
+.config.json
+docs/style/.assets.lua
 
 -- git
 *.orig
@@ -24,3 +27,13 @@ Makefile
 
 -- Intel Tools
 *Amplifier*
+
+-- Docs
+*.chi
+*.chm
+
+-- ZPM 
+extern/
+assets/
+test/extern
+test/assets
